# glutinium

./: DISTFILES.md  README.md
.github/: FUNDING.yml
25volt/: Makefile
25volt/src/: usb_ups_apc_smart.c  usb_ups_powercom_wow.c
accel-ppp/: Makefile
accel-ppp/files/: S60accel-ppp
accel-ppp/patches/: 010-no-config-install.patch  020-config-paths.patch  030-linkage.patch  032-ppp-no-modprobe.patch  050-chap-secrets-pool.patch
aprx/: Makefile
aprx/patches/: 101-aprsis_c_supports_multipal_tnc.patch
aprx2/: Makefile
aprx2/patches/: 100-Makefile_in.patch
baoclone/files/: README.txt  TODO-ft-60r.txt  bf-888s-factory.conf  bf-888s-factory.img  bf-888s-sunnyvale.conf  bf-888s-sunnyvale.img  ft-60r-sunnyvale.conf  ft-60r-sunnyvale.img  uv-5r-factory.conf  uv-5r-factory.img  uv-5r-gmrs.conf  uv-5r-sunnyvale.conf  uv-5r-sunnyvale.img  uv-b5-chirp.img  uv-b5-factory.conf  uv-b5-factory.img  uv-b5-sunnyvale.conf
baoclone/src/: Makefile  bf-888s.c  ft-60r.c  main.c  radio.c  radio.h  util.c  util.h  uv-5r.c  uv-b5.c
barcode/: Makefile
barcode/src/: barcode.c
button-hotplug-gw/: Makefile
button-hotplug-gw/files/: btn_handlers.sh  factory_reset  hotplug  uci-defaults
changemac/: README.md
changemac/src/: changemac.c
darkice/: Makefile  Makefile_lame_mp3  Makefile_ogg_opus  Makefile_ogg_vorbis
darkice/files/: darkice.cfg
deco/: Makefile  Readme.md
deco/patches/: 001-deco39.1-update.patch
demo/: Makefile
estgb/: Makefile  README.md
estgb/src/: estgb.c  sstgb.c  telebot-core.c  telebot-private_debug.h
etherdump/: Makefile
etherdump/patches/: 001-small-fix.patch
fixsum/: Makefile
fixsum/src/: fixsum.c
flash_tool/: Makefile
flypeek/: Makefile  README.md
flyscripts/: Makefile
gpio-littlewire/: Makefile  README.md
gpio-rcswitch/: Makefile  README.md
gpio-watch/: Makefile  README.md
hi35xx-ffmpeg/: 0_Build.sh  Readme.md
hi35xx-mt7601u/: Makefile  Readme.textile
hi35xx-rtl8188eu/: Makefile
hi35xx-rtl8188fu/: Makefile  Readme.textile
hi35xx_sensor_ar0130/: Makefile
hi35xx_sensor_imx222/: Makefile
hi35xx_sensor_imx323/: Makefile
hi35xx_sensor_jxf22/: Makefile
hi35xx_sensor_jxf23/: Makefile
hi35xx_sensor_jxh42/: Makefile
hi35xx_sensor_ov9712/: Makefile
hi35xx_sensor_ov9732/: Makefile
hi35xx_sensor_sc1135/: Makefile
hi35xx_sensor_sc2035/: Makefile
hi35xx_sensor_sc2135/: Makefile
hi35xx_sensor_sc2235/: Makefile
hi_chip_info/: Makefile
himpp/: Config.in  Extdrv.mk  Makefile  Samples.mk  Sensors.mk
hisi-i2c/: Makefile  README.md
hisi-mt7601u/: Makefile  Makefile.old
hisi-osdrv1/: Makefile  README.md
hisi-osdrv2/: Makefile  README.md
hisi-osdrv3/: Makefile  README.md
hisi-osdrv4/: Makefile  README.md
hisi-rpc-config/: Makefile  README.md
hisi-rpc-config/src/: CMakeLists.txt  camera.cpp  camera.h  main.cpp  picojson.h  server.cpp  server.h
hisi-rtsp/: Makefile
hisi-sample/: Makefile  README.md
hisi-sample/src/: CMakeLists.txt  jpg.c  loadbmp.c  loadbmp.h  main.c  sample_comm.h  sample_comm_isp.c  sample_comm_ive.c  sample_comm_ive.h  sample_comm_sys.c  sample_comm_venc.c  sample_comm_vi.c  sample_init.c  sample_venc.c  sensors.cpp  sensors.yml
hisi-sensors/: README.md
hisi-trace/: Makefile
homes-smart/: Makefile  README.md
httping/: Makefile
hub-ctrl/: Makefile
i2c-hd44780/: Makefile  README.md  temp_notes.md
i2c-lcd/: Makefile  README.md
i2c-telemetry/: Makefile  Makefile~  README.md
ipc_chip_info/: Makefile
ipeye/: Makefile  README.md
kdb/: Makefile
kmod-rcswitch/: Makefile  README.md
libmicrohttpd-no-ssl/: Makefile
libnl-3/: Makefile
libxsonrpc/: Makefile  README.md
libxsonrpc/src/: .travis.yml  CMakeLists.txt
libxsonrpc/src/3pp/: update
libxsonrpc/src/3pp/integer_seq/: README.txt  integer_seq.h  integer_seq_util.h  test.cc
libxsonrpc/src/examples/: CMakeLists.txt  base64.cpp  testclient.cpp  testserver.cpp
libxsonrpc/src/include/xsonrpc/: client.h  dispatcher.h  fault.h  formathandler.h  jsonformathandler.h  request.h  response.h  server.h  value.h  xmlformathandler.h  xmlrpcsystemmethods.h
libxsonrpc/src/src/: CMakeLists.txt  client.cpp  dispatcher.cpp  json.h  jsonformathandler.cpp  jsonreader.cpp  jsonreader.h  jsonwriter.cpp  jsonwriter.h  reader.h  request.cpp  response.cpp  server.cpp  util.cpp  util.h  value.cpp  writer.h
little-wire/: Makefile  README.md
littlewire/: Makefile  README.md
littlewire-extra/: Makefile  README.md
lowpan-tools/: Makefile
luci-app-ipcam/: Makefile
luci-mod-octonix/: Makefile  luci_octonix.config
luci-mod-openwisp/: Makefile  luci_openwisp.config
luci-octonix/: Makefile  README.md
luci-openwisp/: Makefile  README.md
luci-theme-octonix/: Makefile  README.md
luci-theme-openwisp/: Makefile
megatec/: Makefile  README.md
mercury206/: Makefile  README.md
mercury236/: Makefile  README.md
microbe/: Makefile  README.md
microbe-web/: Makefile  README.md
micronucleus/: Makefile  README.md
microsources/: README.markdown  find_sqfs.c  shbin.c
mii-diag/: Makefile  README.md
mini_snmpd/: Makefile
minihttp/: Makefile
mjpg-streamer-lite/: Makefile  README.md
modbus-cli/: Makefile  README.md
modbus-tinny/: Makefile  README.md
mt76x8/: Makefile  README.md
mtd-utils/: Makefile
nrpe/: Makefile
pelco-ptz/: Makefile  Runme  pelco.c  pelco.h
pjsua/: Makefile  Makefile-2.4.5  Makefile-2.7.1  Makefile-2.8  patches
prometheus-node-exporter-lua/: Makefile  Readme.md
pzem004t/: Makefile  README.md
ralink-wifi-mt76x8/: Makefile
rcswitch/: Makefile  README.md
remserial/: Makefile
rs485conf/: Makefile  README.md
rtl8188fu/: Makefile
rtsp-hisi/: Makefile
serialoverip/: Makefile
simpletun/: Makefile
sshpass/: Makefile
sstgb/: Makefile  README.md
tg-bot1/: Makefile  README.md
tg-bot2/: Makefile  README.md
tg-web/: Makefile  README.md
tinyaprs/: Makefile
uvc-ctrl/: Makefile
uvc2http/: Makefile
uvpn/: Makefile  Readme.textile
vtun-lite/: Makefile
webadmin/: Makefile
wtf/: Makefile
xm-uart/: Makefile  main.c
zabbix-uci/: Makefile  README.md
(+1358 files in other folders)
